--- a/package.json
+++ b/package.json
@@ -35,5 +35,29 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "src/index",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/dream-approaching/test-ts.git"
+  },
+  "keywords": [
+    "react",
+    "ts"
+  ],
+  "author": "longzi",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dream-approaching/test-ts/issues"
+  },
+  "homepage": "https://github.com/dream-approaching/test-ts#readme"
 }
