修复eslint不报错的问题，原因是外层文件夹内存在.eslintrc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
   "editor.formatOnSave": true,
   "javascript.preferences.quoteStyle": "single",
   "typescript.preferences.quoteStyle": "single",
-  "eslint.validate": ["javascript", "javascriptreact", "typescript"],
+  "eslint.validate": ["javascript", "javascriptreact", "html", "typescript", "typescriptreact"],
   "typescript.tsdk": "node_modules/typescript/lib"
 }
