--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3002 react-scripts start ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -40,14 +40,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-html": "^6.0.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "prettier": "^2.0.5"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "src/index",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/dream-approaching/test-ts.git"
@@ -61,5 +60,5 @@
   "bugs": {
     "url": "https://github.com/dream-approaching/test-ts/issues"
   },
-  "homepage": "https://github.com/dream-approaching/test-ts#readme"
+  "homepage": "https://github.com/dream-approaching/test-ts"
 }
